--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -27,7 +27,7 @@
   </servlet-mapping>
 
 <!--  <welcome-file-list>-->
-<!--    <welcome-file>/</welcome-file>-->
+<!--    <welcome-file>/productGroups</welcome-file>-->
 <!--  </welcome-file-list>-->
 
 </web-app>
